# prime_tan_amanda

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/prime_yt2863/: __init__.py  prime_yt2863.py
tests/: test_prime_yt2863.py
