[tool.poetry]
name = "prime_yt2863"
version = "0.1.0"
description = "QMSS Database Package"
authors = ["Amanda Tan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
